[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/Other/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Fonts/Small_font.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=6]
action = "retry"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="GameOver" type="Node"]
script = ExtResource( 1 )

[node name="GameOver-UI" type="CanvasLayer" parent="."]
layer = 80

[node name="Control" type="Control" parent="GameOver-UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="GameOver-UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="text" type="RichTextLabel" parent="GameOver-UI/Control"]
anchor_right = 1.0
anchor_bottom = 0.348214
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=red][wave][center]GAME OVER!"
text = "GAME OVER!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="GameOver-UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver-UI/Control/CenterContainer"]
margin_left = 166.0
margin_top = 82.0
margin_right = 233.0
margin_bottom = 142.0

[node name="Retry_button" type="Button" parent="GameOver-UI/Control/CenterContainer/VBoxContainer"]
margin_right = 67.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
text = "Retry!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit_button" type="Button" parent="GameOver-UI/Control/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 67.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GameOver-UI/Control/CenterContainer/VBoxContainer/Retry_button" to="." method="_on_Retry_button_pressed"]
[connection signal="pressed" from="GameOver-UI/Control/CenterContainer/VBoxContainer/Quit_button" to="." method="_on_Quit_button_pressed"]
